trunk/OldArchive/e6d98caf47bd05bf92cad58c4017d7b0-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:6:1: error: expected unqualified-id before 'private'
 private static bool isDoc(string s)
 ^
